# rejseplanen-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  makefile  pyproject.toml
src/rejseplanen/: __init__.py  api.py  cli.py  config.py  formatter.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_formatter.py  test_models.py
